--- a/CA.Recipe.InterfacesAdapters/CA.Recipe.InterfacesAdapters.csproj
+++ b/CA.Recipe.InterfacesAdapters/CA.Recipe.InterfacesAdapters.csproj
@@ -165,6 +165,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Gateways\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
@@ -179,6 +180,12 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CA.Recipe.Application\CA.Recipe.Application.csproj">
+      <Project>{811d982d-8c4e-4d8a-abfa-825a4ccf4a46}</Project>
+      <Name>CA.Recipe.Application</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
