--- a/CA.Recipe.Application/CA.Recipe.Application.csproj
+++ b/CA.Recipe.Application/CA.Recipe.Application.csproj
@@ -41,14 +41,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="DS\Disc.cs" />
+    <Compile Include="Interfaces\IDiscGateway.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DiscService.cs" />
+    <Compile Include="Services\PortResponses\InputDTOs.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CA.Recipe.Enterprise\CA.Recipe.Enterprise.csproj">
       <Project>{c893ecc6-4790-445c-92eb-cbc2e6fdad65}</Project>
       <Name>CA.Recipe.Enterprise</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Helpers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
