--- a/CA.Recipe.Application/CA.Recipe.Application.csproj
+++ b/CA.Recipe.Application/CA.Recipe.Application.csproj
@@ -41,11 +41,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DS\Disc.cs" />
-    <Compile Include="Interfaces\IDiscGateway.cs" />
+    <Compile Include="Interfaces\IAmountGateway.cs" />
+    <Compile Include="Interfaces\IIngredient.cs" />
+    <Compile Include="Interfaces\IRecipeGateway.cs" />
+    <Compile Include="Interfaces\IScoreGateway.cs" />
+    <Compile Include="Interfaces\IUserGateway.cs" />
+    <Compile Include="Interfaces\IWatchLaterGateway.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\DiscService.cs" />
-    <Compile Include="Services\PortResponses\InputDTOs.cs" />
+    <Compile Include="Services\LoginService.cs" />
+    <Compile Include="Services\Port\RecipePort.cs" />
+    <Compile Include="Services\Port\UserPort.cs" />
+    <Compile Include="Services\RaterService.cs" />
+    <Compile Include="Services\RecipeService.cs" />
+    <Compile Include="Services\SearcherService.cs" />
+    <Compile Include="Services\UserService.cs" />
+    <Compile Include="Services\WriterService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CA.Recipe.Enterprise\CA.Recipe.Enterprise.csproj">
@@ -54,6 +64,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="DS\" />
     <Folder Include="Helpers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
