--- a/CA.Recipe.Application/CA.Recipe.Application.csproj
+++ b/CA.Recipe.Application/CA.Recipe.Application.csproj
@@ -46,13 +46,15 @@
     <Compile Include="Exceptions\EntityNotFoundException.cs" />
     <Compile Include="Exceptions\InvalidRequestException.cs" />
     <Compile Include="Interfaces\IAmountGateway.cs" />
-    <Compile Include="Interfaces\IIngredient.cs" />
+    <Compile Include="Interfaces\IIngredientGateway.cs" />
     <Compile Include="Interfaces\IRecipeGateway.cs" />
     <Compile Include="Interfaces\IScoreGateway.cs" />
     <Compile Include="Interfaces\IUserGateway.cs" />
     <Compile Include="Interfaces\IWatchLaterGateway.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IngredientService.cs" />
     <Compile Include="Services\LoginService.cs" />
+    <Compile Include="Services\Port\IngredientPort.cs" />
     <Compile Include="Services\Port\RecipePort.cs" />
     <Compile Include="Services\Port\UserPort.cs" />
     <Compile Include="Services\RaterService.cs" />
