--- a/CA.Recipe.Application/CA.Recipe.Application.csproj
+++ b/CA.Recipe.Application/CA.Recipe.Application.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Exceptions\AlreadyAddedException.cs" />
+    <Compile Include="Exceptions\IncorrectPasswordException.cs" />
     <Compile Include="Exceptions\EmailInUseException.cs" />
     <Compile Include="Exceptions\EntityNotFoundException.cs" />
     <Compile Include="Exceptions\InvalidRequestException.cs" />
