Adding infrastructure EF

--- a/CA.Recipe.FrameworksDrivers/CA.Recipe.FrameworksDrivers.csproj
+++ b/CA.Recipe.FrameworksDrivers/CA.Recipe.FrameworksDrivers.csproj
@@ -49,5 +49,11 @@
       <Name>CA.Recipe.InterfacesAdapters</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Data\Recipe\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
