--- a/CA.Recipe.Application/CA.Recipe.Application.csproj
+++ b/CA.Recipe.Application/CA.Recipe.Application.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Services\Port\RecipePort.cs" />
     <Compile Include="Services\Port\ScorePort.cs" />
     <Compile Include="Services\Port\UserPort.cs" />
+    <Compile Include="Services\Port\WatchLaterPort.cs" />
     <Compile Include="Services\RaterService.cs" />
     <Compile Include="Services\RecipeService.cs" />
     <Compile Include="Services\SearcherService.cs" />
