--- a/CA.Recipe.InterfacesAdapters/bin/CA.Recipe.InterfacesAdapters.dll.config
+++ b/CA.Recipe.InterfacesAdapters/bin/CA.Recipe.InterfacesAdapters.dll.config
@@ -67,7 +67,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-	  <add name="RecipeContext" connectionString="metadata=res://*/Data.Recipe.RecipeContext.csdl|res://*/Data.Recipe.RecipeContext.ssdl|res://*/Data.Recipe.RecipeContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-BD8D45BV;initial catalog=ca_recipe;persist security info=True;user id=admin;password=recetaCode;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <!--<add name="RecipeContext" connectionString="metadata=res://*/Data.Recipe.RecipeContext.csdl|res://*/Data.Recipe.RecipeContext.ssdl|res://*/Data.Recipe.RecipeContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-BD8D45BV;initial catalog=ca_recipe;persist security info=True;user id=admin;password=recetaCode;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+	  <add name="RecipeContext" connectionString="metadata=res://*/Data.Recipe.RecipeContext.csdl|res://*/Data.Recipe.RecipeContext.ssdl|res://*/Data.Recipe.RecipeContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=recipesCA.mssql.somee.com;initial catalog=recipesCA;persist security info=True;user id=kirbyCoder_SQLLogin_1;password=usrn6sxhsx;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 <system.webServer>
     <handlers>
