--- a/CA.Recipe.InterfacesAdapters/packages.config
+++ b/CA.Recipe.InterfacesAdapters/packages.config
@@ -5,6 +5,7 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="jQuery" version="3.4.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.9" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc.es" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net452" />
@@ -13,6 +14,7 @@
   <package id="Microsoft.AspNet.Web.Optimization.es" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.9" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.9" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages.es" version="3.2.7" targetFramework="net452" />
