--- a/CA.Recipe.FrameworksDrivers/CA.Recipe.FrameworksDrivers.csproj
+++ b/CA.Recipe.FrameworksDrivers/CA.Recipe.FrameworksDrivers.csproj
@@ -31,7 +31,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -78,12 +85,6 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CA.Recipe.InterfacesAdapters\CA.Recipe.InterfacesAdapters.csproj">
-      <Project>{72f14494-0f67-4e52-9c10-4f7fae71caf2}</Project>
-      <Name>CA.Recipe.InterfacesAdapters</Name>
-    </ProjectReference>
-  </ItemGroup>
   <ItemGroup />
   <ItemGroup>
     <Content Include="Data\Recipe\RecipeContext.tt">
@@ -99,6 +100,7 @@
     <Content Include="Data\Recipe\RecipeContext.edmx.diagram">
       <DependentUpon>RecipeContext.edmx</DependentUpon>
     </Content>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Data\Recipe\RecipeContext.Context.tt">
